fix high width of container on smaller screens

--- a/src/css/_main.scss
+++ b/src/css/_main.scss
@@ -18,6 +18,7 @@ body {
 }
 
 .container {
+    width: 70%;
     max-width: 1400px;
 }
 
